# tonyOS

./: README.md  config.toml  main.py  pyproject.toml  temp.py
.copilot/: commands.txt
data/prompts/: system.md
src/tony/: __init__.py  __main__.py  logging_setup.py  metadata.py
src/tony/clarification/: __init__.py  engine.py  exceptions.py  models.py  protocols.py
src/tony/configuration/: __init__.py  loader.py  manager.py  models.py
src/tony/container/: __init__.py  container.py  registry.py
src/tony/context/: __init__.py  exceptions.py  models.py  service.py
src/tony/context_builder/: __init__.py  builder.py  exceptions.py  models.py  protocols.py
src/tony/conversation/: __init__.py  exceptions.py  models.py  protocols.py  service.py
src/tony/core/: __init__.py  application.py  bootstrap.py
src/tony/llm/: __init__.py  exceptions.py  protocols.py  service.py
src/tony/pipeline/: __init__.py  (+3 more)
tests/: __init__.py  test_application.py  test_bootstrap.py  test_clarification_engine.py  test_clarification_models.py  test_classifier.py  test_container.py  test_context_builder.py  test_conversation.py  test_conversation_service.py  test_llm_service.py  test_logging.py  test_ollama_client.py  test_ollama_provider.py  test_pipeline_service.py  test_plan_factory.py  test_planner_models.py  test_planner_service.py  test_prompt_builder.py  test_prompt_loader.py  test_prompt_manager.py  test_provider_manager.py  test_response_generator.py  test_response_models.py  test_response_streamer.py  test_session_manager.py  test_session_models.py  test_stream_models.py
(+40 files in other folders)
