[project]
name = "tonyos"
version = "0.1.0"
description = "Tony - a local-first AI system administrator for Fedora Linux."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pytest>=9.1.1",
]

[project.scripts]
tony = "tony.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tony"]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "basedpyright>=1.18",
    "pytest>=8.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.basedpyright]
include = ["src", "tests"]
pythonVersion = "3.13"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = ["tests"]
